--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -7,10 +7,12 @@ pico_sdk_init()
 add_subdirectory(./lib/Config)
 add_subdirectory(./lib/LCD)
 add_subdirectory(./lib/Fonts)
+add_subdirectory(./lib/Turtle)
 
 include_directories(./lib/Config)
 include_directories(./lib/Fonts)
 include_directories(./lib/LCD)
+include_directories(./lib/Turtle)
 
 add_executable(main 
 main.cpp
@@ -23,4 +25,4 @@ pico_enable_stdio_uart(main 1)
 # create map/bin/hex/uf2 file etc.
 pico_add_extra_outputs(main)
 
-target_link_libraries(main LCD Fonts Config pico_stdlib hardware_spi hardware_i2c)
+target_link_libraries(main Turtle LCD Fonts Config pico_stdlib hardware_spi hardware_i2c)
